게시글 카테고리 조회
- 게시글 전체 조회 삭제
- 게시글 카테고리 조회 PageResponse type 변경