@@ -3,13 +3,12 @@ package org.bogus.groove.endpoint.post;
 import io.swagger.v3.oas.annotations.Operation;
 import io.swagger.v3.oas.annotations.tags.Tag;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.bogus.groove.common.CommonResponse;
+import org.bogus.groove.common.PageResponse;
 import org.bogus.groove.config.CustomUserDetails;
 import org.bogus.groove.config.SecurityCode;
 import org.bogus.groove.domain.post.PostService;
-import org.springframework.data.domain.Pageable;
 import org.springframework.security.access.annotation.Secured;
 import org.springframework.security.core.annotation.AuthenticationPrincipal;
 import org.springframework.web.bind.annotation.DeleteMapping;
@@ -19,6 +18,7 @@ import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.PutMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
+import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 @Tag(name = "post-controller")
@@ -31,32 +31,35 @@ public class PostController {
 
     @Operation(summary = "게시글 작성")
     @PostMapping
-    public CommonResponse<Void> createPost(@AuthenticationPrincipal CustomUserDetails userDetails, @RequestBody PostCreateRequest request) {
+    public CommonResponse<Void> createPost(@AuthenticationPrincipal CustomUserDetails userDetails,
+                                           @RequestBody PostCreateRequest request) {
         postService.createPost(request.getTitle(), request.getContent(), userDetails.getUserId(),
             request.getCategoryId());
         return CommonResponse.success();
     }
 
-    @Operation(summary = "게시글 리스트 조회")
-    @GetMapping
-    public CommonResponse<List<PostResponse>> getPostList(@AuthenticationPrincipal CustomUserDetails userDetails, Pageable pageable) {
-        return CommonResponse.success(
-            postService.getPostList(userDetails.getUserId(), pageable).stream().map(post -> new PostResponse(post)).collect(
-                Collectors.toList()));
-    }
-
     @Operation(summary = "카테고리 별 게시글 리스트 조회")
     @GetMapping("/category/{categoryId}")
-    public CommonResponse<List<PostResponse>> getPostList(@AuthenticationPrincipal CustomUserDetails userDetails,
-                                                          @PathVariable Long categoryId, Pageable pageable) {
+    public CommonResponse<PageResponse<List<PostResponse>>> getPostList(
+        @RequestParam int page,
+        @RequestParam int size,
+        @AuthenticationPrincipal CustomUserDetails userDetails,
+        @PathVariable Long categoryId) {
+        var result = postService.getPostList(userDetails.getUserId(), categoryId, page, size);
         return CommonResponse.success(
-            postService.getPostList(userDetails.getUserId(), categoryId, pageable).stream().map(post -> new PostResponse(post)).collect(
-                Collectors.toList()));
+            new PageResponse<>(
+                result.getNumber(),
+                result.getSize(),
+                result.map(PostResponse::new).toList(),
+                result.hasNext()
+            )
+        );
     }
 
     @Operation(summary = "게시글 상세 조회")
     @GetMapping("/{postId}")
-    public CommonResponse<PostDetailResponse> getPost(@AuthenticationPrincipal CustomUserDetails userDetails, @PathVariable Long postId) {
+    public CommonResponse<PostDetailResponse> getPost(@AuthenticationPrincipal CustomUserDetails userDetails,
+                                                      @PathVariable Long postId) {
         return CommonResponse.success(new PostDetailResponse(postService.getPost(userDetails.getUserId(), postId)));
     }
 
